Resolves: tdf#146825 select under mouse on right click

if something isn't already selected

Change-Id: Ifa692cd71bb71ecb5c7af732deef510f2bac5fce